Fix textarea text color in dark mode

--- a/css/dark.css
+++ b/css/dark.css
@@ -48,7 +48,7 @@ nav .switch label .lever::after {
   color: #a4a4a4!important;
  }
 
-input {
+input, textarea {
   color: #a4a4a4!important;
 }
 
